--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,9 @@
 }
 
 header {
-  margin-top: 13px;
+  margin: 13px;
   padding: 0 30px;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 nav {
@@ -24,6 +24,7 @@ a {
 }
 
 section {
+  width: 100%;
   height: 500px;
   background-image: url("../images/background.jpg");
   background-position: center;
