--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,11 @@ a {
 section {
   width: 100%;
   height: 500px;
-  background-image: url("../images/background.jpg");
+  background-image: url("../images/background1.jpg");
   background-position: center;
   background-size: cover;
+}
+
+.prof {
+  text-align: center;
 }
