--- a/styles/style.css
+++ b/styles/style.css
@@ -31,10 +31,46 @@ section {
   background-size: cover;
 }
 
+.pdesc {
+  display: block;
+}
+
+ img {
+   display: inline-block;
+  float: right;
+  width: 200px;
+ }
+
 .prof {
   text-align: center;
 }
 
+#experience {
+  margin-top: 70px;
+}
+
 ul {
   list-style-type: none;
+}
+
+.btn {
+  border: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 40px;
+  width: 15px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
 }
