--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ section {
 
 ul {
   list-style-type: none;
+  padding: 0px;
 }
 
 .btn {
@@ -71,6 +72,11 @@ ul {
 }
 
 .fa-facebook {
-    background: #3B5998;
-    color: white;
+  background: #3B5998;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
 }
