--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ section {
   display: block;
 }
 
- img {
+.prof img {
   display: inline-block;
   float: right;
   width: 200px;
@@ -42,9 +42,6 @@ section {
 
 .prof {
   text-align: center;
-}
-
-#experience {
   margin-top: 100px;
 }
 
@@ -60,15 +57,13 @@ ul {
 
 .fa:hover {
   opacity: 0.7;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .fa {
-  padding: 20px;
   font-size: 40px;
-  width: 55px;
   text-align: center;
   text-decoration: none;
-  border-radius: 50%
 }
 
 .fa-facebook {
@@ -82,7 +77,11 @@ ul {
 }
 
 .fa-github {
-  background-image: url("../images/github.png");
   color: black !important;
+}
 
+@media screen and (max-width: 480px) {
+  .prof img {
+    position: relative;
+  }
 }
