--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ a {
 }
 
 .row {
-  height: 300px;
+  height: auto;
   background-color: #bfbbbb;
 }
 
@@ -91,6 +91,24 @@ ul {
 
 .fa-github {
   color: black !important;
+}
+
+.container2 {
+  margin: auto;
+  width: 75%;
+  height: 600px;
+}
+
+h2 {
+  text-align: center;
+}
+
+.carousel-inner{
+  height: 600px;
+}
+
+.carousel-inner .img .active{
+  height: 50%;
 }
 
 @media screen and (max-width: 700px) {
